# CurrencyExchange

./: .env  .gitmodules  Dockerfile  Makefile  README.md  mypy.ini  pyproject.toml
app/: env.py  main.py
app/application/api/: handler.py  main.py  test.py
app/application/router/: base.py  currencies.py  currency.py  exchange.py  exchange_rate.py  exchange_rates.py
app/application/services/: currency_conversion_service.py
app/currencies/: dao.py  errors.py  router.py
app/currency/: dao.py  errors.py  router.py
app/dao/: base.py  dao.py
app/domain/aggregates/: currency_pair.py  exchange_rate.py
app/domain/entities/: base.py  currency.py  exchange_rate.py  money.py
app/domain/exceptions/: base.py  code.py  exchange_rate.py  money.py  rate.py
app/domain/interface/: repository.py
app/domain/services/: conversion_service.py  currency_exchange_service.py
app/exchange/: errors.py  router.py
app/exchange_rate/: errors.py  router.py
app/exchange_rates/: dao.py  errors.py  router.py
app/handlers/: base_router.py  http_request.py  http_response.py
app/requestschema/: http_request.py
app/response/: base_error.py  base_success.py  common_error.py
app/router/: base.py
app/settings/: config.py
app/storage/: database.py  sqlite.py
app/tests/: conftest.py
currency-exchange-frontend/: launch-local-nginx.sh
database/: db.db  db.db-journal  init.sql
docker_compose/: app.yaml  storage.yaml
frontend/: index.html
frontend/js/: app.js
requests/: CurrencyExchange.json
tests/: test_exchange_rate.py  test_money.py
(+71 files in other folders)
